2012-09-12  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure: Check for platforms/.svn because
	platforms/unix/.svn was removed by a repository upgrade for
	compatibility with recent versions of svn.

2012-07-30  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* Version is 4.9.8-2562.

2012-07-30  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src: update to VMMaker 4.9.8.

	* config, */Makefile.inc, */mkmf.subdirs: Obsolete autotools files
	deleted.

	* plugins/ScratchPlugin, plugins/UnicodePlugin,
	plugins/WeDoPlugin: Added for better Scratch support.

	* plugins/CameraPlugin: Updated to latest version.

	* plugins/VideoForLinuxPlugin/config.cmake: Disable plugin if
	videodev.h not found.

	* plugins/UUIDPlugin/sqUnixUUID.c: Include first found of
	uuid/uuid.h or uuid.h, but not both.

	* plugins/UUIDPlugin/config.cmake: Disable plugin if no headers
	found or no uuid generator function found.

	* vm/build.cmake, cmake/ckformat.c: Include ckformat in build and
	install.

	* vm-display-custom/sqUnixCustomWindow.c (display_printUsageNotes)
	(display_parseEnvironment): Suppress irrelevant noise during startup.

2011-11-23  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c: Rename DPRINTF -> DPRINTF3D.

2011-10-30  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/B3DAcceleratorPlugin/sqUnixOpenGL.c: Rename DPRINTF ->
	DPRINTF3D for consistency.

2011-04-28  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/LocalePlugin/sqUnixLocale.c: Do not copy trailing NUL
	from C to Squeak strings.

2011-03-31  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* vm/sqUnixExternalPrims.c: Resolve symbols eagerly on FreeBSD.

	* vm-display-X11/sqUnixX11.c (initPixmap): Remove reference to undefined function "error".

2011-03-30  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/FloatMathPlugin/config.cmake: Re-enable GCC optimisations.
