@@ -27,7 +27,7 @@
 
 /* Author: Ian Piumarta <ian.piumarta@squeakland.org>
  *
- * Last edited: 2011-01-24 10:31:12 by piumarta on emilia.local
+ * Last edited: 2012-09-14 05:15:14 by piumarta on solaris11x86
  */
 
 #include "sq.h"
@@ -218,7 +218,18 @@ sqInt sqUnixUtcWithOffset(sqLong *microSeconds, int *offset)
   time_t seconds= timeval.tv_sec;
   suseconds_t usec= timeval.tv_usec;
   *microSeconds= seconds * 1000000 + usec;
+#if defined(HAVE_TM_GMTOFF)
   *offset= localtime(&seconds)->tm_gmtoff;
+#else
+  {
+    struct tm *local= localtime(&seconds);
+    struct tm *gmt= gmtime(&seconds);
+    int d= local->tm_yday - gmt->tm_yday;
+    int h= ((d < -1 ? 24 : 1 < d ? -24 : d * 24) + local->tm_hour - gmt->tm_hour);
+    int m= h * 60 + local->tm_min - gmt->tm_min;
+    *offset= m * 60;
+  }
+#endif
   return 0;
 }
 
